Shifted image panel down to avoid overlap
git-svn-id: https://ncwms.svn.sourceforge.net/svnroot/ncwms/trunk@332 f020452a-5e1f-0410-8fa4-ae2b6fb27d5e

--- a/web/css/godiva2.css
+++ b/web/css/godiva2.css
@@ -85,7 +85,7 @@ div.imagePanel
 {
     position: absolute;
     left: 0px;
-    top: 140px;
+    top: 160px;
     width: 600px;
 }
 
